apps/pihole/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: security-redirect-https@kubernetescrd
    cluster-config/suffix-host: "true"
    cluster-config/suffix-tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.SUFFIX
      http:
        paths:
          - pathType: Prefix
            path: /admin
            backend:
              service:
                name: pihole-ui-svc
                port:
                  name: 80-tcp
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: pihole-ui-svc
                port:
                  name: 80-tcp
  tls:
    - secretName: pihole-tls
      hosts:
        - pihole.SUFFIX
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-0-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: security-redirect-https@kubernetescrd
    cluster-config/suffix-host: "true"
    cluster-config/suffix-tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: pihole-0.SUFFIX
      http:
        paths:
          - pathType: Prefix
            path: /admin
            backend:
              service:
                name: pihole-0-ui-svc
                port:
                  name: 80-tcp
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: pihole-0-ui-svc
                port:
                  name: 80-tcp
  tls:
    - secretName: pihole-0-tls
      hosts:
        - pihole-0.SUFFIX
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-1-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: security-redirect-https@kubernetescrd
    cluster-config/suffix-host: "true"
    cluster-config/suffix-tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: pihole-1.SUFFIX
      http:
        paths:
          - pathType: Prefix
            path: /admin
            backend:
              service:
                name: pihole-1-ui-svc
                port:
                  name: 80-tcp
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: pihole-1-ui-svc
                port:
                  name: 80-tcp
  tls:
    - secretName: pihole-1-tls
      hosts:
        - pihole-1.SUFFIX
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-2-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: security-redirect-https@kubernetescrd
    cluster-config/suffix-host: "true"
    cluster-config/suffix-tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: pihole-2.SUFFIX
      http:
        paths:
          - pathType: Prefix
            path: /admin
            backend:
              service:
                name: pihole-2-ui-svc
                port:
                  name: 80-tcp
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: pihole-2-ui-svc
                port:
                  name: 80-tcp
  tls:
    - secretName: pihole-2-tls
      hosts:
        - pihole-2.SUFFIX
